Wed Feb  8 10:48:36 CET 2006    Frediano Ziglio <freddyz77_A_lycos_D_com>
	* include/tdsodbc.h src/odbc/error.c src/odbc/odbc.c:
	* vms/odbc_driver_axp.opt win32/FreeTDS.def:
	- start cursor stuff for odbc
	- added SQLSetScrollOptions
	* src/odbc/unittests/scroll.c: support more fetch types

Tue Feb  7 15:42:56 CET 2006    Frediano Ziglio <freddyz77_A_lycos_D_com>
	* include/tds.h src/tds/query.c src/ctlib/ct.c NEWS:
	- improve cursor support

Tue Feb  7 14:22:50 CET 2006    Frediano Ziglio <freddyz77_A_lycos_D_com>
	* src/odbc/unittests/scroll.c(added):
	* src/odbc/unittests/.cvsignore:
	* src/odbc/unittests/Makefile.am:
	* src/odbc/unittests/cursor1.c:
	- add scroll test for cursor
	- build msvc project for odbc unittests
	* src/dblib/unittests/Makefile.am: add done_handling test

Mon Feb  6 16:50:05 CET 2006    Frediano Ziglio <freddyz77_A_lycos_D_com>
	* include/sybdb.h src/apps/freebcp.c src/dblib/bcp.c:
	- implemented BCPKEEPIDENTITY for bcp_control
	- make freebcp do not depend on dblib internals

Mon Feb  6 16:44:27 CET 2006    Frediano Ziglio <freddyz77_A_lycos_D_com>
	* src/odbc/unittests/.cvsignore src/odbc/unittests/cursor1.c:
	- update cursor1 test

Thu Feb  2 15:33:21 CET 2006    Frediano Ziglio <freddyz77_A_lycos_D_com>
	* NEWS: updated
	* src/odbc/odbc.c vms/odbc_driver_axp.opt win32/FreeTDS.def:
	- compile SQLSetPos function
	* src/odbc/unittests/Makefile.am src/odbc/unittests/cursor1.c(added):
	- added a test for cursors (do not work...)

Tue Jan 31 14:27:51 CET 2006    Frediano Ziglio <freddyz77_A_lycos_D_com>
	* src/apps/freebcp.c src/dblib/bcp.c:
	- fix broken charcater conversion
	- use calloc instead of malloc/memset
	- support 64bit file on win32

Tue Jan 31 09:59:28 CET 2006    Frediano Ziglio <freddyz77_A_lycos_D_com>
	* src/dblib/dblib.c: do more argument check

Mon Jan 30 16:29:20 CET 2006    Frediano Ziglio <freddyz77_A_lycos_D_com>
	* src/ctlib/unittests/blk_out.c src/ctlib/unittests/ct_cursor.c: