@@ -1,3 +1,6 @@
+Mon Feb 13 17:11:30 CET 2006    Frediano Ziglio <freddyz77_A_lycos_D_com>
+	* src/odbc/unittests/genparams.c: add BIGINT type to test
+
 Wed Feb  8 10:48:36 CET 2006    Frediano Ziglio <freddyz77_A_lycos_D_com>
 	* include/tdsodbc.h src/odbc/error.c src/odbc/odbc.c:
 	* vms/odbc_driver_axp.opt win32/FreeTDS.def:
